--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,5 +2,5 @@ body{
     color:green;
     text-align: center;
     font-family: arial;
-    background-color: grey;
+    background-color: hotpink;
 }
