--- a/css/estilos.css
+++ b/css/estilos.css
@@ -15,10 +15,10 @@ body{
 .footer{
     text-align: center;
     font-family: Verdana;
-    background-color: lightcoral;
+    background-color: lightgreen;
     padding: 30px;
 }
 .footer>a{
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 25px;
+    padding-right: 25px;
 }
