Adicione estilo boostrap online

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,7 @@ body{
     color: green;
     background-color: #CCFF99 ;
 }
-.container{
+.main{
     text-align: center;
     font-family: arial;
 
