--- a/css/estilos.css
+++ b/css/estilos.css
@@ -11,10 +11,22 @@ body{
     text-align: left;
     font-family: Georgia;
     border-color: brown;
+    background: #37488b;
+    box-shadow: 0px 2px 20 px 0px rgba(0, 0, 0, 0.5);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+}
+.menubar>#logo
+{
+    width: 20px;
+    vertical-align: middle;
 }
 .menubar>a{
     padding-left: 15px;
     padding-right: 15px;
+    font-weight: normal;
 }
 .footer{
     font-family: Verdana;
